docs: 更新"实际工作经验"文档, 前端常用的设计模式有哪些

--- a/Node2/实际工作相关.md
+++ b/Node2/实际工作相关.md
@@ -137,3 +137,116 @@
 
 ------
 
+
+
+## 四、前端常用的设计模式有哪些
+
+### 1. 设计原则
+
++ 最重要的思想：开放封闭原则
++ 对扩展开放
++ 对修改封闭
+
+### 2. 工厂模式
+
++ 用一个工厂函数，来创建实例，隐藏 new
+
++ 如 jQuery $ 函数
+
++ 如 React createElement 函数
+
+  ```js
+  // 工厂模式
+  function factory(a, b, c) {
+    // if else
+    return new Foo()
+  }
+  
+  const f = factory(1, 2, 3)
+  
+  // $('div') === new JQuery()
+  ```
+
+### 3. 单例模式
+
++ 全局唯一的实例（无法生产第二个）
+
++ 如 Vuex Redux 的 store
+
++ 如全局唯一的 dialog modal
+
+  ```typescript
+  // 单例模式
+  class SingleTon {
+    private static instance: SingleTon | null = null
+    private constructor() {}
+    public static getInstance(): SingleTon {
+      if (this.instance == null) this.instance = new SingleTon()
+      return this.instance
+    }
+    fn1()
+    fn2()
+  }
+  
+  const s = new SingleTon()  // 会报错
+  const s = SingleTon.getInstance()
+  const s1 = SingleTon.getInstance()
+  s === s1 // true
+  ```
+  
+ + 扩展
+
+   1. JS 是单线程的，创建单例很简单
+   2. Java 是支持多线程的，创建单例要考虑锁死线程
+   3. 否则多个线程同时创建，单例就重复了（多线程共享进程内存）
+
+### 4. 代理模式
+
++ 使用者不能直接访问对象，而是访问一个代理层
++ 在代理层可以监听 get set 做很多事情
++ 如 ES6 Proxy 实现 Vue3 响应式
+
+### 5. 观察者模式
+
+```js
+// 一个主题，一个观察者，主题变化之后触发观察者执行
+btn.addEventListener('click', () => {})
+```
+
+### 6. 发布订阅
+
+```js
+// 绑定
+event.on('event-key', () => {
+  // 事件一
+})
+event.on('event-key', () => {
+  // 事件二
+})
+// 触发执行
+event.emit('event-key')
+```
+
++ 温故而知新：绑定的事件要记得解除，防内存泄漏
+
+### 7. 装饰器模式
+
++ 原功能不变，增加一些新功能（ AOP 面向切面编程）
++ ES 和 TypeScript 的 Decorator 语法
++ 类装饰器，方法装饰器
+
+### 8. 划重点
+
++ 经典设计模式有 23 个，这是基于后端写的，前段不是都常用
++ 要结合应用场景
+
+### 9. (连环问) 观察者模式和发布订阅模式的区别
+
+![image-20220426104340901](https://burt-markdown.oss-cn-shenzhen.aliyuncs.com/markdown/image-20220426104340901.png)
+
++ 观察者模式
+  1. Subject 和 Observer 直接绑定，没有中间媒介
+  2. 如 addEventlistener 绑定事件
++ 发布订阅
+  1. Publisher 和 Observer 互不认识，需要中间媒介 Event channel
+  2. 如 EventBus 自定义事件
