docs: 部分文档图片上传至图床docs: 更新"实际工作经验"文档, 在实际工作中做过哪些 Vue 优化，和遇到的坑

--- a/Node2/实际工作相关.md
+++ b/Node2/实际工作相关.md
@@ -250,3 +250,99 @@ event.emit('event-key')
 + 发布订阅
   1. Publisher 和 Observer 互不认识，需要中间媒介 Event channel
   2. 如 EventBus 自定义事件
+
+------
+
+
+
+## 五、在实际工作中，做过哪些 Vue 优化
+
+### 1. v-if 和 v-show
+
++ v-if 彻底销毁组件
++ v-show 使用 CSS 隐藏组件
++ 大部分情况下使用 v-if 更好，不要过度优化
+
+### 2. v-for 使用 key
+
+```html
+<ul>
+  <!-- 而且，key 不要用 index -->
+  <li v-for="(id, name) in list" :key="id">{{ name }}</li>
+</ul>
+```
+
+### 3. 使用 computed 缓存
+
+```js
+export default {
+  data() {
+    return {
+      msgList: [...]  // 消息列表
+    }
+  },
+  computed: {
+    // 未读消息数量
+    unreadCount() {
+      return this.msgList.filter(item => item.read === false).length
+    }
+  }
+}
+```
+
+### 4. keep-alive 缓存组件
+
++ 频繁切换的组件，如 tabs
++ 不要乱用，缓存太多会占用内存，且不好 debug
+
+### 5. 异步组件
+
++ 针对体积较大的组件，如编辑器、复杂表格，复杂表单等
++ 拆包，需要时异步加载，不需要时不加载
++ 减少主包的体积，首页会加载更快
+
+### 6. 路由懒加载
+
++ 项目比较大，拆分路由，保证首页先加载
+
+### 7. 服务端渲染 SSR
+
++ 可使用 Nuxt.js
++ 按需优化，使用 SSR 的成本比较高
+
+### 8. 划重点
+
++ 性能优化要按需进行，不要为了优化而优化
+
+------
+
+
+
+## 六、(连环问) 你使用 Vue 遇到哪些坑
+
+### 1. 内存泄漏
+
++ 全局变量，全局事件，全局定时器
++ 自定义事件
+
+### 2. Vue2 响应式的缺陷（ Vue3 不再有）
+
++ data 新增属性要用 Vue.set
++ data 删除属性用 Vue.delete
++ 无法直接修改数组 arr[index] = value
+
+### 3. 路由切换时 scroll 到顶部
+
++ SPA 的通病，不仅仅是 Vue
++ 如：列表页，滚动到第二屏，点击进入详情页
++ 再返回到列表页（此时组件重新渲染）就 scroll 到顶部
+
+### 4. 路由切换时 scroll 到顶部 - 解决方案
+
++ 在列表页缓存数据和 scrollTop 值
++ 当再次返回列表页时，渲染组件，执行 scrollTo(xx)
++ 终极方案：MPA + App WebView
+
+### 5. 划重点
+
++ 日常要注意记录总结，遇到坑就记录一下
