docs: 部分文档图片上传至图床docs: 更新"实际工作经验"文档, 如何统一监听 Vue 组件报错

--- a/Node2/实际工作相关.md
+++ b/Node2/实际工作相关.md
@@ -346,3 +346,52 @@ export default {
 ### 5. 划重点
 
 + 日常要注意记录总结，遇到坑就记录一下
+
+------
+
+## 七、如何统一监听 Vue 组件报错
+
+### 1. window.onerror
+
++ 全局监听所有 JS 错误
++ 但它是 JS 级别的，识别不了 Vue 组件信息
++ 捕捉一些 Vue 监听不到的错误
+
+### 2. errorCaptured 生命周期
+
++ 监听所有 **下级** 组件的错误
++ 返回 `false` 会阻止向上传播
+
+### 3. errorHandler 配置
+
++ Vue 全局错误监听，所有组件错误都会汇总到这里
+
++ 但 errorCaptured 返回 false ，不会传播到这里
+
+  ```js
+  // main.js
+  app.config.errorCaptured = (err, vm, info) => {
+    console.log('errorCaptured')
+  }
+  ```
+
+### 4. 异步错误
+
++ 异步回调里的错误，errorHandler 监听不到
++ 需要使用 window.onerror
+
+### 5. 答案
+
++ errorCaptured 监听下级组件错误，返回 false 阻止向下传播
++ errorHandler 监听全局 Vue 组件错误
++ window.onerror 监听其他 JS 错误，如异步 
+
+### 6. 划重点
+
++ 实际工作中，三者要结合使用
++ errorCaptured 监听一些重要、有风险组件的错误
++ window.onerror 和 errorHandler 候补全局监听
+
+### 7. 扩展
+
++ Promise 为处理的 catch 需要 onunhandledrejection
