--- a/Node2/实际工作相关.md
+++ b/Node2/实际工作相关.md
@@ -349,6 +349,8 @@ export default {
 
 ------
 
+
+
 ## 七、如何统一监听 Vue 组件报错
 
 ### 1. window.onerror
@@ -395,3 +397,56 @@ export default {
 ### 7. 扩展
 
 + Promise 为处理的 catch 需要 onunhandledrejection
+
+------
+
+
+
+## 八、H5 很慢，如何排查性能问题
+
+### 1. 前端性能指标
+
++ First Paint ( FP )
++ First Contentful Paint ( FCP )
++ DomContentLoaded ( DCL )
++ Largest Contentfull Paint ( LCP )
++ Load ( L )
+
+### 2. Chrome devTools
+
++ Performance 可查看上述性能指标，并有网页快照
++ Network 可以查看各个资源的加载时间
+
+### 3. Lighthouse
+
++ 非常流行的第三方性能评测工具
+
++ 支持移动端和 PC
+
+  1. 安装( 或使用 Chrome 自带 )
+
+     ```shell
+     npm i lighthouse -g
+     ```
+
+  2. 运行
+
+     ```shell
+     lighthouse https://wwww.burt1025.cn --view --preset=desktop
+     ```
+
+### 4. 识别问题：哪里慢？
+
+![image-20220427100308304](https://burt-markdown.oss-cn-shenzhen.aliyuncs.com/markdown/image-20220427100308304.png)
+
++ 如果是网页加载慢
+  1. 优化服务端硬件配置，使用 CDN
+  2. 路由懒加载，大组件异步加载 - 减少主包的体积
+  3. 优化 HTTP 缓存策略
++ 如果是网页渲染慢
+  1. 优化服务端接口（如 Ajax 获取数据慢）
+  2. 继续分析，优化前端组件内部的逻辑
+  3. 服务端渲染 SSR
++ 持续跟进
+  1. 性能优化是一个循序渐进的过程，不像 bug 一次性解决
+  2. 持续跟进统计结果，再逐步分析性能瓶颈，持续优化
