docs: 更新"编写高质量代码"文档，(连环问)实现数组深度扁平化

--- a/Node2/编写高质量代码.md
+++ b/Node2/编写高质量代码.md
@@ -84,3 +84,41 @@ describe("数组扁平化单元测试", () => {
     })
 })
 ```
+
+------
+
+
+
+## (连环问) 实现数组深度扁平化
+
+### 1. Array Flatten 彻底 “ 拍平 ”
+
++ 写一个 JS 函数，实现数组扁平化，减少所有嵌套层级
++ 如输入 `[1, [2, [3]], 4]`，输出 `[1, 2, 3, 4]`
+
+### 2. 思路
+
++ 先实现一级扁平化，然后 **递归调用**，直到全部扁平
+
+### 3. 代码
+
+```typescript
+/**
+ * 数组深度扁平化
+ * @param arr
+ */
+export function flatten(arr: any[]): any[] {
+    let res: any[] = []
+    arr.forEach(item => {
+        if (Array.isArray(item)) {
+            res = res.concat(flatten(item))
+        } else {
+            res.push(item)
+        }
+    })
+    return res
+}
+```
+
+------
+
