--- a/React/环境搭建.md
+++ b/React/环境搭建.md
@@ -103,3 +103,64 @@ declare module "*.css" {
 }
 ```
 
+------
+
+
+
+## 五、State vs Props
+
+### 1.State 和 Props 的区别
+
++  props 是组件对外的接口，而 state 是组件对内的接口
++  props 用于组件间数据传递，而  state 用于组件内部的数据传递
+
+### 2. state 正确的打开方式
+
++ state 是私有的，可以认为 state 是组件的 “私有属性”
+
++ 用 setState() 修改 State
+
+  1. 直接修改 state，组件不会触发 render 函数，页面不会渲染
+
+     ```js
+     // 错误
+     this.state.isOpen = true
+     ```
+
+  2. 正确的修改方式是使用 setState()
+
+     ```js
+     this.setState({ isOpen: !this.state.isOpen })
+     ```
+
+### 3. 初始化
+
++ 构建函数 constructor 是唯一可以初始化 state 的地方
+
+  ```js
+  // 生命周期第一阶段： 初始化
+  constructor(props) {
+      super(props);
+      this.state = {
+          isOpen: false
+      }
+  }
+  ```
+
+### 4. state 的更新是异步的
+
++ 调用 setState 后，state 不会立刻改变，是异步操作
++ 不要依赖当前的 state，计算下个 state
+
+### 5. props
+
++ 本质上，props 就是传入函数的参数，是从传入组件内部的数据。
++ 更准确说，是父组件传递向子组件的数据
+
+### 6. Immutable
+
++ 中文：不变的
++ 对象一旦创建就不可改变，只能通过销毁、重建来改变数据
++ 通过判断地内存地址是否一致，来确认对象是否有经过修改
++ props 是只读属性的
++ 函数式编程
