doc: react 更新 setState 的异步开发及生命周期

--- a/React/环境搭建.md
+++ b/React/环境搭建.md
@@ -164,3 +164,27 @@ declare module "*.css" {
 + 通过判断地内存地址是否一致，来确认对象是否有经过修改
 + props 是只读属性的
 + 函数式编程
+
+------
+
+
+
+## 六、setState 的异步开发
+
+### 1. setState() 是异步还是同步
+
++ 异步更新，同步执行
+  1. setState() 本身并非异步，但对 state 的处理机制给人一种异步的假象
+  2. state 处理一般发生在生命周期变化的时候
+
+------
+
+
+
+## 七、 React 组件的生命周期
+
+### 1. Mounting ：创建虚拟 DOM，渲染 UI
+
+### 2. Updating：更新虚拟 DOM，重新渲染 UI
+
+### 3. Unmounting：删除虚拟 DOM，移除 UI
