doc: React 学习 “什么是钩子（hooks）”

--- a/React/环境搭建.md
+++ b/React/环境搭建.md
@@ -188,3 +188,57 @@ declare module "*.css" {
 ### 2. Updating：更新虚拟 DOM，重新渲染 UI
 
 ### 3. Unmounting：删除虚拟 DOM，移除 UI
+
+------
+
+
+
+## 八、钩子（hooks）
+
+### 1. 非类组件中使用 state
+
++ 什么是 hooks
++ hooks 产生的原因
++ 常见的 hooks 函数
+
+### 2. 什么是钩子( hooks )
+
++ 消息处理的一种方法，用来监视指定程序
++ 函数组件中需要处理副作用，可以用钩子把外部代码 “钩” 进来
++ 常用钩子：`useState`, `useEffect`, `useContext`, `useReducer`
++ hooks 一律使用 use 前缀命名：useXxxx
+
+### 3. Hooks 的本质
+
++ 一类特殊的函数，为你的函数形式组件注入特殊的功能
+
+### 4. React 为什么要创造 Hooks 这个概念？
+
++ 有些组件冗长而且复杂，难以复用
++ 解决方案：**无状态组件** 与 **HOC( 高阶组件 )** 但还是存在诸多问题
++ Hooks 的目的就是为了给函数式组件加上状态
++ 生命周期函数会同时处理多项任务：发起 ajax、跟踪数据状态、绑定事件监听
++ 函数式组件则轻量化很多，使用 Hooks 钩子来钩入组件状态
+
+### 5. 常见钩子
+
++ 状态钩子：useState()
+
+  ```js
+  const [count, setCount] = useState(0);
+  ```
+
+  1. React 自带的一个 hook 函数，声明组件状态
+  2. 参数可以设置 state 的初始值（initial state）
+  3. 返回值是一个只有两个元素的数组：[ 状态，状态更新函数 ]
+
++ 副作用钩子：useEffect()
+
+  ```js
+  useEffect(() => {
+    document.title = `点击${count}次`
+  }, [count])
+  ```
+
+  1. 可以取代生命周期函数 componentDidMount, componentDidUpdate 和 componentWillUnmount
+  2. 给函数式组件添加副作用（side effect）
