doc: React 学习 “副作用 Side-effect”

--- a/React/环境搭建.md
+++ b/React/环境搭建.md
@@ -242,3 +242,26 @@ declare module "*.css" {
 
   1. 可以取代生命周期函数 componentDidMount, componentDidUpdate 和 componentWillUnmount
   2. 给函数式组件添加副作用（side effect）
+
+------
+
+
+
+## 九、副作用 Side-effect
+
+### 1. 什么是副作用
+
++ 与药物的副作用类似：减肥药（拉肚子）
++ 纯函数（pure function）
+  1. 给一个函数同样的参数，那么这个函数永远返回同样的值
+  2. 函数式编程理念
+  3. React 组件输入相同的参数(props)，渲染 UI 应该永远一样
+  4. 副作用与纯函数相反，指一个函数处理了与返回值无关的事情
+
+### 2. 副作用是件坏事吗？
+
++ 不是，很多代码必须得借助副作用才能实现，如：ajax、修改 DOM，甚至是 console.log
++ React： state 状态的改变，生命周期，构建函数
+
+------
+
