--- a/React/环境搭建.md
+++ b/React/环境搭建.md
@@ -265,3 +265,26 @@ declare module "*.css" {
 
 ------
 
+
+
+## 十、自定义高阶组件 HOC
+
+### 1. HOC 的公式
+
++ `const hoc = higherOrde(wrappedComponent);`
++ 高阶组件（HOC）就是一个返回了组件的函数
++ 通过组件嵌套的方法给子组件添加更多的功能
++ 接收一个组件作为参数并返回一个经过改造的新组件
+
+### 2. 为什么要使用高阶组件
+
++ 抽取重复代码，实现组件复用
++ 条件渲染，控制组件的渲染逻辑（渲染劫持）
++ 捕获 / 劫持被处理组件的生命周期
+
+### 3. 命名规范
+
++ withXXX() -> withAddToCart()
+
+------
+
